fix social icons on narrow screen

--- a/private/npdc/scss/m_599.scss
+++ b/private/npdc/scss/m_599.scss
@@ -108,6 +108,12 @@ body:not(.sticky) #page {
 }
 #footer {
 	text-align:center;
+	.social {
+		display: block;
+		.sep:first-child {
+			display: none;
+		}
+	}
 }
 .search td:not(:nth-child(2)),
 .project td:not(:nth-child(1)) {
